# SkillGym

./: .env.example  .gitignore  README.md  pyproject.toml
SkillGym/: README.md  pyproject.toml
SkillGym/benchmarks/: sample_tasks.json
SkillGym/skill_optimizer/: cli.py  models.py
SkillGym/skill_optimizer/adapters/: harbor.py
SkillGym/skill_optimizer/normalization/: trace_normalizer.py
SkillGym/skill_optimizer/promotion/: decider.py
SkillGym/skill_optimizer/utils/: io.py
SkillGym/skillgym/optimization/: upskill_adapter.py
SkillGym/skillgym/storage/: repository.py
SkillGym/skills/continuous-skill-loop/: SKILL.md
benchmarks/: e2e_skillbench.json  sample_skillbench.json
docs/: skillgym_pitch_deck.md
integrations/skillbench/: README.md  task_runs.schema.json
integrations/skillbench/mock/: Dockerfile  skillbench.py
scripts/: run_e2e_skillbench_demo.sh  run_real_harbor_e2e.sh  run_real_skillbench_e2e.sh
skills/: README.md
skills/continuous-skill-loop/: SKILL.md
skills/e2e-poor-skill/: SKILL.md
src/: cli.py  settings.py
src/adapters/: harbor.py  skillbench.py
src/normalization/: trace_normalizer.py
src/optimization/: gepa_adapter.py  upskill_adapter.py
src/orchestrator/: pipeline.py
src/promotion/: decider.py
src/scoring/: trulens_adapter.py
src/skillgym/: cli.py
src/skillgym/optimization/: gepa_adapter.py
src/skillgym/orchestrator/: pipeline.py
src/skillgym/scoring/: trulens_adapter.py
src/storage/: repository.py
src/utils/: io.py
