[project]
name = "skillgym"
version = "0.1.0"
description = "SkillGym CLI for continuous skill improvement loop integrating Harbor, TruLens GPA, and optimizer adapters."
authors = [{ name = "Codex" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skillgym = "skillgym.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
