[project]
name = "skill-optimizer"
version = "0.1.0"
description = "MVP CLI for continuous skill improvement loop integrating Harbor, TruLens GPA, and optimizer adapters."
authors = [{ name = "Codex" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skill-optimizer = "skill_optimizer.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
